kubernetes/day13/require-probes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-probes
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-probes
      match:
        any:
        - resources:
            kinds:
              - Deployment
              - StatefulSet
              - DaemonSet
              - Pod
      validate:
        message: "Liveness and Readiness probes are required for all containers."
        pattern:
          spec:
            containers:
              - (livenessProbe): "*"
                (readinessProbe): "*"
